infrastructure/ingress/istio-gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-gateway
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: "${acm_certificate_arn}"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: "grafana.meraki-mv-rekognition.aws.outscope.com, kiali.meraki-mv-rekognition.aws.outscope.com, jaeger.meraki-mv-rekognition.aws.outscope.com"

spec:
  rules:
    - http:
        paths:
          - path: /healthz/ready
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 15021
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-gateway-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            exact: /healthz/ready
      route:
        - destination:
            host: istio-gateway
            port:
              number: 15021
    - match:
        - headers:
            host:
              exact: grafana.meraki-mv-rekognition.aws.outscope.com
      route:
        - destination:
            host: grafana
            port:
              number: 3000
    - match:
        - headers:
            host:
              exact: kiali.meraki-mv-rekognition.aws.outscope.com
      route:
        - destination:
            host: kiali
            port:
              number: 20001
    - match:
        - headers:
            host:
              exact: jaeger.meraki-mv-rekognition.aws.outscope.com
      route:
        - destination:
            host: tracing
            port:
              number: 80
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: grafana-gateway
#  namespace: istio-system
#spec:
#  selector:
#    istio: gateway
#  servers:
#    - port:
#        number: 80
#        name: http-grafana
#        protocol: HTTP
#      hosts:
#        - "grafana.meraki-mv-rekognition.aws.outscope.com"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: grafana-vs
#  namespace: istio-system
#spec:
#  hosts:
#    - "grafana.meraki-mv-rekognition.aws.outscope.com"
#  gateways:
#    - grafana-gateway
#  http:
#    - route:
#        - destination:
#            host: grafana
#            port:
#              number: 3000
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: kiali-gateway
#  namespace: istio-system
#spec:
#  selector:
#    istio: gateway
#  servers:
#    - port:
#        number: 80
#        name: http-kiali
#        protocol: HTTP
#      hosts:
#        - "kiali.meraki-mv-rekognition.aws.outscope.com"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: kiali-vs
#  namespace: istio-system
#spec:
#  hosts:
#    - "kiali.meraki-mv-rekognition.aws.outscope.com"
#  gateways:
#    - kiali-gateway
#  http:
#    - route:
#        - destination:
#            host: kiali
#            port:
#              number: 20001
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: jaeger-gateway
#  namespace: istio-system
#spec:
#  selector:
#    istio: gateway
#  servers:
#    - port:
#        number: 80
#        name: http-jaeger
#        protocol: HTTP
#      hosts:
#        - "jaeger.meraki-mv-rekognition.aws.outscope.com"
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: jaeger-vs
#  namespace: istio-system
#spec:
#  hosts:
#    - "jaeger.meraki-mv-rekognition.aws.outscope.com"
#  gateways:
#    - jaeger-gateway
#  http:
#    - route:
#        - destination:
#            host: tracing
#            port:
#              number: 80
